# advent-of-code

./: .gitignore
2019/: template.py
2019/day_01/python/: part1.py  part2.py
2019/day_02/python/: part1.py  part2.py
2019/day_03/python/: part1.py  part2.py
2021/: new_day
2021/day_01/python/: part1.py  part2.py
2021/day_02/python/: part1.py  part2.py
2021/day_03/python/: part1.py  part2.py
2021/day_04/python/: part1.py  part2.py
2021/day_05/python/: part1.py  part2.py
2021/day_06/python/: part1.py  part2.py
2021/day_07/python/: part1.py  part2.py
2021/day_08/python/: part1.py  part2.py
2021/day_09/python/: part1.py  part2.py
2021/day_10/python/: part1.py  part2.py
2022/: Justfile  skelly  template.py
2022/day_01/: README.md
2022/day_01/python/: part1.py  part2.py
2022/day_02/python/: README.md  part1.py  part2.py
2022/day_03/python/: part1.py  part2.py
2022/day_04/python/: part1.py  part2.py
2022/day_05/python/: part1.py  part2.py
2022/day_06/python/: part1.py  part2.py
2022/day_07/python/: part1.py  part2.py
2022/day_07/rust/: Cargo.toml
2022/day_08/python/: part1.py  part2.py
2022/day_09/python/: part1.py  part2.py
2022/day_10/python/: part1.py  part2.py
2022/day_11/: original.txt
2022/day_11/python/: part1.py  part2.py
2023/template/: pytest.ini
2024/: requirements.txt
2024/adventlib/: Justfile
2024/day_15/: sample3.txt
2025/: requirements.txt
2025/adventlib/: pyproject.toml
2025/adventlib/src/adventlib/: __init__.py  grid.py
2025/adventlib/tests/: test_grid.py
2025/day_02/: pytest.ini
(+75 files in other folders)
